--- a/.travis.yml
+++ b/.travis.yml
@@ -63,14 +63,20 @@ matrix:
   - php: nightly
   # We exclude some combinations not usefull to save Travis CPU
   exclude:
+  - php: '5.3'
+    env: DB=mariadb
   - php: '5.4'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '5.5'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '5.6'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '7.0'
-    env: DB=postgresql
+    env: DB=mariadb
+  - php: '7.1'
+    env: DB=mariadb
+  - php: '7.2'
+    env: DB=mariadb
   - php: hhvm
     env: DB=postgresql
   - php: nightly
