--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ env:
   matrix:
   # MariaDB overrides MySQL installation so it's not possible to test both yet
   #- DB=mysql
-  - DB=mariadb
+  #- DB=mariadb
   - DB=postgresql
   # TODO
   #- DB=sqlite
@@ -64,16 +64,20 @@ matrix:
   - php: nightly
   # We exclude some combinations not usefull to save Travis CPU
   exclude:
+  - php: '5.3'
+    env: DB=mariadb
   - php: '5.4'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '5.5'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '5.6'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '7.0'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '7.1'
-    env: DB=postgresql
+    env: DB=mariadb
+  - php: '7.2'
+    env: DB=mariadb
   - php: hhvm
     env: DB=postgresql
   - php: nightly
