--- a/.travis.yml
+++ b/.travis.yml
@@ -324,12 +324,12 @@ script:
   echo '$'force_install_createdatabase=false';' >> $INSTALL_FORCED_FILE
   echo '$'force_install_createuser=false';' >> $INSTALL_FORCED_FILE
   echo '$'force_install_mainforcehttps=false';' >> $INSTALL_FORCED_FILE
-  echo '$'force_install_main_data_root=\'$TRAVIS_BUILD_DIR/tdocs\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_main_data_root=\'$TRAVIS_BUILD_DIR/htdocs\'';' >> $INSTALL_FORCED_FILE
   # TODO: SQLite
   cat $INSTALL_FORCED_FILE
   echo "Installation test"
   cd htdocs/install
-  php step1.php $TRAVIS_BUILD_DIR/htdocs > $TRAVIS_BUILD_DIR/install.log
+  php step1.php $TRAVIS_BUILD_DIR/tdocs > $TRAVIS_BUILD_DIR/install.log
   php step2.php set >> $TRAVIS_BUILD_DIR/install.log
   cd ../..
   rm $INSTALL_FORCED_FILE
