--- a/.travis.yml
+++ b/.travis.yml
@@ -340,7 +340,7 @@ script:
   - |
   echo "Setting up database"
   if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ] || [ "$DB" = 'postgresql' ]; then
-    echo "MySQL"
+    echo "MySQL2"
     mysql -e 'DROP DATABASE IF EXISTS travis;'
     mysql -e 'CREATE DATABASE IF NOT EXISTS travis;'
     mysql -e 'GRANT ALL PRIVILEGES ON travis.* TO travis@127.0.0.1;'
