--- a/.travis.yml
+++ b/.travis.yml
@@ -217,7 +217,7 @@ before_script:
   if [ "$DB" = 'postgresql' ]; then
     #pgsql travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
     #pgloader mysql://root:pass@127.0.0.1/base postgresql://dolibarrowner@127.0.0.1/dolibarr
-    pgloader mysql://root@127.0.0.1/travis postgresql:///travis
+    pgloader mysql://travis@127.0.0.1/travis postgresql:///travis
   fi
   # TODO: SQLite
   echo
