--- a/.travis.yml
+++ b/.travis.yml
@@ -217,7 +217,7 @@ before_script:
   if [ "$DB" = 'postgresql' ]; then
     #pgsql travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
     #pgloader mysql://root:pass@127.0.0.1/base postgresql://dolibarrowner@127.0.0.1/dolibarr
-    pgloader mysql://travis@127.0.0.1/travis postgresql:///travis
+    pgloader mysql://root@127.0.0.1/travis postgresql:///travis
   fi
   # TODO: SQLite
   echo
@@ -333,7 +333,7 @@ script:
   echo '$'force_install_mainforcehttps=false';' >> $INSTALL_FORCED_FILE
   echo '$'force_install_main_data_root=\'$TRAVIS_BUILD_DIR/htdocs\'';' >> $INSTALL_FORCED_FILE
   # TODO: SQLite
-  cat $INSTALL_FORCED_FILE
+  #cat $INSTALL_FORCED_FILE
   echo "Installation test"
   cd htdocs/install
   php step1.php $TRAVIS_BUILD_DIR/tdocs > $TRAVIS_BUILD_DIR/install.log
