--- a/.travis.yml
+++ b/.travis.yml
@@ -313,7 +313,7 @@ script:
   export INSTALL_FORCED_FILE=htdocs/install/install.forced.php
   echo "Setting up Dolibarr $INSTALL_FORCED_FILE"
   # Ensure we catch errors
-  set -e
+  set +e
   echo '<?php ' > $INSTALL_FORCED_FILE
   echo '$'force_install_noedit=2';' >> $INSTALL_FORCED_FILE
   if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ]; then
@@ -340,7 +340,7 @@ script:
   php step2.php set >> $TRAVIS_BUILD_DIR/install.log
   cd ../..
   rm $INSTALL_FORCED_FILE
-  cat $TRAVIS_BUILD_DIR/install.log
+  #cat $TRAVIS_BUILD_DIR/install.log
   set +e
   echo
   
