--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ addons:
     # To use the last version of pgloader, we add repo of postgresql
     - postgresql
     - sourceline: 'deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main'
-    - key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc'  
+    - key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc' 
+    - sourceline: 'deb http://http.us.debian.org/debian  main non-free'
     packages:
     # We need a webserver to test the webservices
     # Let's install Apache with.
