--- a/.travis.yml
+++ b/.travis.yml
@@ -65,16 +65,18 @@ matrix:
   - php: nightly
   # We exclude some combinations not usefull to save Travis CPU
   exclude:
+  - php: '5.3'
+    env: DB=mariadb
   - php: '5.4'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '5.5'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '5.6'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '7.0'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: '7.1'
-    env: DB=postgresql
+    env: DB=mariadb
   - php: hhvm
     env: DB=postgresql
   - php: nightly
@@ -195,14 +197,14 @@ before_script:
   fi
   
 - |
-  echo "Setting up database"
+  echo "Setting up database for install test"
   if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ] || [ "$DB" = 'postgresql' ]; then
     echo "MySQL"
     mysql -e 'DROP DATABASE IF EXISTS travis;'
     mysql -e 'CREATE DATABASE IF NOT EXISTS travis;'
     mysql -e 'GRANT ALL PRIVILEGES ON travis.* TO travis@127.0.0.1;'
     mysql -e 'FLUSH PRIVILEGES;'    
-    mysql -D travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+    #mysql -D travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
   fi
   if [ "$DB" = 'postgresql' ]; then
     #pgsql travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
@@ -211,6 +213,14 @@ before_script:
   fi
   # TODO: SQLite
   echo
+
+- |
+  echo "Unit testing"
+  phpunit --version
+  # Ensure we catch errors. Set this to +e if you want to go to the end to see dolibarr.log file.
+  set -e
+  phpunit -d memory_limit=-1 -c test/phpunit/phpunittest.xml test/phpunit/TestInstall.php
+  set +e
 
 - |
   export CONF_FILE=htdocs/conf/conf.php
@@ -267,6 +277,24 @@ before_script:
   echo
 
 script:
+- |
+  echo "Setting up database"
+  if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ] || [ "$DB" = 'postgresql' ]; then
+    echo "MySQL"
+    mysql -e 'DROP DATABASE IF EXISTS travis;'
+    mysql -e 'CREATE DATABASE IF NOT EXISTS travis;'
+    mysql -e 'GRANT ALL PRIVILEGES ON travis.* TO travis@127.0.0.1;'
+    mysql -e 'FLUSH PRIVILEGES;'    
+    mysql -D travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+  fi
+  if [ "$DB" = 'postgresql' ]; then
+    #pgsql travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+    #pgloader mysql://root:pass@127.0.0.1/base postgresql://dolibarrowner@127.0.0.1/dolibarr
+    pgloader mysql://root@127.0.0.1/travis postgresql:///travis
+  fi
+  # TODO: SQLite
+  echo
+
 - |
   echo "Checking webserver availability"
   # Ensure we catch errors
