--- a/.travis.yml
+++ b/.travis.yml
@@ -339,7 +339,7 @@ script:
   #cat $TRAVIS_BUILD_DIR/upgrade500600.log
   #cat $TRAVIS_BUILD_DIR/upgrade500600-2.log
   #cat $TRAVIS_BUILD_DIR/upgrade500600-3.log
-  cat /tmp/dolibarr_install.log
+  #cat /tmp/dolibarr_install.log
   
 - |
   echo "Unit testing"
