--- a/.travis.yml
+++ b/.travis.yml
@@ -311,7 +311,7 @@ script:
   php upgrade.php 3.5.0 3.6.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade350360.log
   echo $?
   if [ $? = '1']; then
-  return 1
+  exit 1
   fi
   php upgrade2.php 3.5.0 3.6.0 > $TRAVIS_BUILD_DIR/upgrade350360-2.log
   php step5.php 3.5.0 3.6.0 > $TRAVIS_BUILD_DIR/upgrade350360-3.log
