--- a/.travis.yml
+++ b/.travis.yml
@@ -310,7 +310,7 @@ script:
   cd htdocs/install
   php upgrade.php 3.5.0 3.6.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade350360.log
   echo $?
-  if [ $? = '1']; then
+  if [ $? = 1]; then
   exit 1
   fi
   php upgrade2.php 3.5.0 3.6.0 > $TRAVIS_BUILD_DIR/upgrade350360-2.log
