--- a/.travis.yml
+++ b/.travis.yml
@@ -196,6 +196,23 @@ before_script:
     echo
   fi
   
+- |
+  echo "Setting up database"
+  if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ] || [ "$DB" = 'postgresql' ]; then
+    echo "MySQL"
+    mysql -e 'DROP DATABASE IF EXISTS travis;'
+    mysql -e 'CREATE DATABASE IF NOT EXISTS travis;'
+    mysql -e 'GRANT ALL PRIVILEGES ON travis.* TO travis@127.0.0.1;'
+    mysql -e 'FLUSH PRIVILEGES;'    
+    #mysql -D travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+  fi
+  if [ "$DB" = 'postgresql' ]; then
+    #pgsql travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+    #pgloader mysql://root:pass@127.0.0.1/base postgresql://dolibarrowner@127.0.0.1/dolibarr
+    pgloader mysql://root@127.0.0.1/travis postgresql:///travis
+  fi
+  # TODO: SQLite
+  echo
 
 
 - |
@@ -304,15 +321,68 @@ script:
 # TODO: Check CSS (csslint?)
 
 - |
+  export INSTALL_FORCED_FILE=htdocs/install/install.forced.php
+  echo "Setting up Dolibarr $INSTALL_FORCED_FILE"
+  # Ensure we catch errors
+  set +e
+  echo '<?php ' > $INSTALL_FORCED_FILE
+  echo '$'force_install_noedit=2';' >> $INSTALL_FORCED_FILE
+  if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ]; then
+    echo '$'force_install_type=\'mysqli\'';' >> $INSTALL_FORCED_FILE
+  fi
+  if [ "$DB" = 'postgresql' ]; then
+    echo '$'force_install_type=\'pgsql\'';' >> $INSTALL_FORCED_FILE
+  fi
+  echo '$'force_install_dbserver=\'127.0.0.1\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_database=\'travis\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_databaselogin=\'travis\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_databasepass=\'\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_port=\'5432\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_prefix=\'llx_\'';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_createdatabase=false';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_createuser=false';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_mainforcehttps=false';' >> $INSTALL_FORCED_FILE
+  echo '$'force_install_main_data_root=\'$TRAVIS_BUILD_DIR/htdocs\'';' >> $INSTALL_FORCED_FILE
+  # TODO: SQLite
+  #cat $INSTALL_FORCED_FILE
+  echo "Installation test"
+  cd htdocs/install
+  php step1.php $TRAVIS_BUILD_DIR/htdocs > $TRAVIS_BUILD_DIR/install.log
+  php step2.php set >> $TRAVIS_BUILD_DIR/install.log
+  if [ "$?" -ne "0" ]; then
+    echo "Sorry, an error occured"
+    exit 1
+  fi
+  cd ../..
+  rm $INSTALL_FORCED_FILE
+  #cat $TRAVIS_BUILD_DIR/install.log
+  set +e
+  echo
+  
+- |
+  echo "Setting up database"
+  if [ "$DB" = 'mysql' ] || [ "$DB" = 'mariadb' ] || [ "$DB" = 'postgresql' ]; then
+    echo "MySQL"
+    mysql -e 'DROP DATABASE IF EXISTS travis;'
+    mysql -e 'CREATE DATABASE IF NOT EXISTS travis;'
+    mysql -e 'GRANT ALL PRIVILEGES ON travis.* TO travis@127.0.0.1;'
+    mysql -e 'FLUSH PRIVILEGES;'    
+    mysql -D travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+  fi
+  if [ "$DB" = 'postgresql' ]; then
+    #pgsql travis < dev/initdemo/mysqldump_dolibarr_3.5.0.sql
+    #pgloader mysql://root:pass@127.0.0.1/base postgresql://dolibarrowner@127.0.0.1/dolibarr
+    pgloader mysql://root@127.0.0.1/travis postgresql:///travis
+  fi
+  # TODO: SQLite
+  echo
+  
+- |
   echo "Upgrading Dolibarr"
   # Ensure we catch errors
   set +e
   cd htdocs/install
   php upgrade.php 3.5.0 3.6.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade350360.log
-  if [ "$?" -ne "0" ]; then
-    echo "Sorry, an error occured"
-    exit 1
-  fi
   php upgrade2.php 3.5.0 3.6.0 > $TRAVIS_BUILD_DIR/upgrade350360-2.log
   php step5.php 3.5.0 3.6.0 > $TRAVIS_BUILD_DIR/upgrade350360-3.log
   php upgrade.php 3.6.0 3.7.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade360370.log
@@ -336,11 +406,6 @@ script:
   php upgrade.php 6.0.0 7.0.0 ignoredbversion > $TRAVIS_BUILD_DIR/upgrade600700.log
   php upgrade2.php 6.0.0 7.0.0 MAIN_MODULE_WEBSITE,MAIN_MODULE_SUPPLIERPROPOSAL > $TRAVIS_BUILD_DIR/upgrade600700-2.log
   php step5.php 6.0.0 7.0.0 > $TRAVIS_BUILD_DIR/upgrade600700-3.log
-  if [ "$?" -ne "0" ]; then
-    echo "Sorry, an error occured"
-    exit 1
-  fi
-  echo $?
   cd -
   set +e
   echo
